# dummy-repo

./: .gitignore  README.md  binance_kline_spot.py  check.sh  cookiecutter.json  dummy.py  readmee.md  tmp.md  tmp.py  tmp.yaml  tmpp.py
.github/workflows/: omnivault_continuous_integration.yaml
omnivault/transformer/decoder/: core.py
omniverse/: _toc.yml
omniverse/linear_algebra/02_vectors/: 04-vector-products.md
rag/: database_capacity.md  graph_cypher_qa.py
{{cookiecutter.project_slug}}/: .coveragerc  .gitattributes  .gitignore  .mypy.ini  .pre-commit.yaml  .pytest.ini  .ruff.toml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/: .ci_vars.txt
{{cookiecutter.project_slug}}/.github/actions/continuous-integration/: action.yaml
{{cookiecutter.project_slug}}/.github/workflows/: _continuous_integration.yaml  continuous_integration.yaml
