[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = [{name="{{ cookiecutter.author_name }}", email="{{ cookiecutter.author_email }}"}]
readme = "README.md"
requires-python = "{{ cookiecutter.requires_python }}"
keywords = []
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "{{ cookiecutter.homepage }}"
Issues = "{{ cookiecutter.issue_tracker_url }}"
Repository = "{{ cookiecutter.repository_url }}"
Changelog = "{{ cookiecutter.repository_url }}/releases"

# SOME DEFAULT DEPENDENCIES
dependencies = [
    "matplotlib>=3.8.0, <4.0.0",
]

[project.optional-dependencies]
dev = [
    "bandit==1.7.5",
    "black==23.10.1",
    "colorama==0.4.6",
    "cookiecutter==2.4.0",
    "coverage==7.3.2",
    "ghp-import==2.1.0",
    "ipywidgets==7.7.2",
    "isort==5.12.0",
    "jupytext==1.15.2",
    "jupyter-book==0.15.1",
    "mypy==1.7.1",
    "pandas-stubs==2.1.4.231227",
    "pre-commit==3.6.0",
    "pytest==7.4.3",
    "pytest-mock==3.12.0",
    "ruff==0.1.7",
    "sphinx-proof==0.1.3",
    "sphinx-sitemap==2.5.1",
    "types-requests==2.31.0.10",
    "types-tqdm==4.66.0.5",
    "typeguard==4.1.5",
]

docs = [
    "colorama==0.4.6",
    "sphinx-proof==0.1.3",
    "sphinx-sitemap==2.5.1",
    "jupyter-book==0.15.1",
    "ghp-import==2.1.0",
    "ipywidgets==7.7.2",
    "jupytext==1.15.2",
]

lint = [
    "bandit==1.7.5",
    "black==23.10.1",
    "isort==5.12.0",
    "mypy==1.7.1",
    "pre-commit==3.6.0",
    "ruff==0.1.7"
]

test = [
    "coverage==7.3.2",
    "pytest==7.4.3",
    "pytest-mock==3.12.0",
    "typeguard==4.1.5"
]

type_stubs = [
    "types-requests==2.31.0.10",
    "types-tqdm==4.66.0.5",
    "pandas-stubs==2.1.4.231227"
]

cookiecutter = [
    "cookiecutter==2.6.0",
    "cruft==2.15.0",
]

serving = [
    "fastapi==0.109.2",
    "uvicorn==0.27.1",
    "gunicorn==21.2.0",
    "Faker==23.2.0",
    "sqlmodel==0.0.14",
    "SQLAlchemy==2.0.22",
    "pydantic==2.5.2",
]

[tool.setuptools.packages.find]
include = ["{{ cookiecutter.project_slug }}*"]

# https://bandit.readthedocs.io/en/latest/config.html
[tool.bandit]
exclude_dirs = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    "venv_*",
    "venv",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
]

[tool.isort]
profile = "black"
line_length = 120
verbose = false
skip = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    "venv_*",
    "venv",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
]
skip_glob = [
    "**/venv_*",
    "venv",
    ".venv",
]

[tool.black]
line-length = 120           # NOTE: in sync with ruff
target-version = ['py39']   # NOTE: in sync with ruff
verbose = false
diff = false
color = false
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
